seconf try for fix image on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -329,7 +329,7 @@ main {
       width: 90vw;
       max-width: 400px;
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr auto;
       grid-template-rows: 1fr auto auto;
       grid-template-areas:
         "poster details"
@@ -340,7 +340,7 @@ main {
       img {
         grid-area: poster;
         width: 100%;
-        height: 50%;
+        height: 60%;
         object-fit: cover;
         border-radius: var(--border-radius) 0 var(--border-radius) 0;
       }
